# keyrs

./: .gitignore  Cargo.toml  README.md  TODO.md  config.simple.toml  config.toml  flake.nix  settings.toml
config.d.example/: 000_base_modmap.toml  100_ief2_filemanager_state.toml  100_multipurpose.toml  200_macro_list_direct_apps.toml  200_terminals.toml  300_file_managers.toml  300_phase9_additional_direct_mappings.toml  400_browsers.toml  400_phase7_baseline_direct_mappings.toml  500_editors.toml  600_desktop_environments.toml  700_stateful.toml  900_fallback.toml  900_fallback_shortcuts.toml  README.md
config.d.example/minimal/: 000_base.toml  100_terminal.toml  200_file_manager.toml  900_fallback.toml
crates/keyrs-core/: Cargo.toml  build.rs
crates/keyrs-core/src/: action.rs  combo.rs  key.rs  lib.rs  mapping.rs  modifier.rs  settings.rs  test_minimal.rs  trigger.rs
crates/keyrs-core/src/config/: combo_parser.rs  keymap_expander.rs  mod.rs  parser.rs
crates/keyrs-core/src/event/: batch.rs  hybrid.rs  loop.rs  mod.rs
crates/keyrs-core/src/input/: device.rs  event.rs  filter.rs  keyboard_type.rs  mod.rs
crates/keyrs-core/src/output/: cache.rs  combo.rs  mod.rs  state.rs  uinput.rs
crates/keyrs-core/src/state/: keystore.rs  mod.rs
crates/keyrs-core/src/transform/: cache.rs  combo.rs  deadkeys.rs  engine.rs  mod.rs  util.rs
crates/keyrs-core/src/window/: mod.rs  provider.rs  wayland.rs  wayland_provider.rs
crates/keyrs-core/tests/: e2e_scenarios.rs  integration_test.rs  production_phase11_parity_test.rs  production_phase16_17_exhaustive_test.rs  user_overrides_template_test.rs
docs/: CONDITION_PATTERNS.md  CONFIG_COMPOSE_WORKFLOW.md  CONFIG_EXAMPLES.md  CONFIG_SYNTAX_REFERENCE.md  INSTALL_AND_SERVICE.md  INSTALL_SERVICE.md  PROFILE_GUIDE.md  SETTINGS_REFERENCE.md  SHORTCUT_CONFIGURATION_GUIDE.md  TROUBLESHOOTING.md
nix/: module.nix  package.nix
profiles/: README.md
profiles/accessibility/: config.toml  profile.toml
profiles/chromebook/: config.toml  profile.toml
profiles/developer/: config.toml  profile.toml
profiles/ergonomic/: config.toml  (+1 more)
scripts/: keyrs-service.sh
src/: lib.rs
(+38 files in other folders)
